# server

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: unittest.yml
accounts/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  telegram.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cart/: admin.py  exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cartproduct_updated_at.py  0003_order_orderproduct.py
core/: serializers.py
info/: admin.py  models.py  urls.py  views.py
info/migrations/: 0001_initial.py
payments/: admin.py  exceptions.py  models.py  schemas.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_coinbasepayment_status_alter_coinbasepayment_uuid.py  0003_rename_coinbasepayment_balancetopupviacoinbase.py  0004_coinbasepayment_delete_balancetopupviacoinbase.py  0005_coinbasepayment_created_at.py
products/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_alter_category_options_alter_category_parent_and_more.py  0002_productpicture_remove_product_picture_url_and_more.py  0003_alter_product_picture_url.py  0003_productpicture_product.py  0004_alter_product_picture_url.py  (+13 more)
shop_bot_server/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
support/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
telegram/: services.py
(+8 files in other folders)
