[tool.poetry]
name = "shop-bot-server"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_bot_server"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
